--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "random-name": "0.1.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.5",
     "uuid": "3.3.2"
   },
   "devDependencies": {
