--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "prop-types": "^15.7.2",
     "random-name": "0.1.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "^7.2.1",
     "react-scripts": "3.0.1",
+    "react-shortcuts": "^2.1.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "uuid": "3.3.2"
   },
   "devDependencies": {
